<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/start_wake_up_screen"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/label_wake_up_screen"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/label3"
        app:layout_constraintStart_toStartOf="@+id/label3"
        app:layout_constraintTop_toBottomOf="@+id/start_vibrate" />

    <Switch
        android:id="@+id/start_notify"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/label_notify"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/label3"
        app:layout_constraintStart_toStartOf="@+id/label3"
        app:layout_constraintTop_toBottomOf="@+id/start_wake_up_screen" />

    <TextView
        android:id="@+id/label_tilde"
        android:layout_width="27dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/label_tilde"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/label_second2"
        app:layout_constraintStart_toEndOf="@+id/label1"
        app:layout_constraintTop_toTopOf="@+id/label1" />

    <TextView
        android:id="@+id/label_second2"
        android:layout_width="27dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/label_second"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label1" />

    <TextView
        android:id="@+id/label_second3"
        android:layout_width="27dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/label_second"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/label_second2"
        app:layout_constraintTop_toBottomOf="@+id/label_second2" />

    <TextView
        android:id="@+id/label3"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/label_start_rest"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label2"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/label4"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/label_end_rest"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label2"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="133dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/label_rest_time"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/label1"
        app:layout_constraintTop_toBottomOf="@+id/label1" />

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/state_ready"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10" />

    <TextView
        android:id="@+id/label1"
        android:layout_width="133dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/label_range"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/state"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/range1"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/label_second1"
        app:layout_constraintStart_toEndOf="@+id/label1"
        app:layout_constraintTop_toTopOf="@+id/label1" />

    <EditText
        android:id="@+id/start_sound_position"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/start_sound_choose"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/start_sound_choose"
        app:layout_constraintTop_toBottomOf="@+id/start_sound_choose" />

    <EditText
        android:id="@+id/end_sound_position"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/end_sound_choose"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/end_sound_choose"
        app:layout_constraintTop_toBottomOf="@+id/end_sound_choose" />

    <EditText
        android:id="@+id/duration"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="1dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/label_second3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/label2"
        app:layout_constraintTop_toBottomOf="@+id/range1" />

    <EditText
        android:id="@+id/range2"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/label_second2"
        app:layout_constraintStart_toEndOf="@+id/label_tilde"
        app:layout_constraintTop_toTopOf="@+id/label1" />

    <TextView
        android:id="@+id/label_second1"
        android:layout_width="27dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/label_second"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/label_tilde"
        app:layout_constraintTop_toTopOf="@+id/label1" />

    <Switch
        android:id="@+id/start_sound"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/label_sound"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/label3"
        app:layout_constraintStart_toStartOf="@+id/label3"
        app:layout_constraintTop_toBottomOf="@+id/label3" />

    <Switch
        android:id="@+id/end_sound"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/label_sound"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/label4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/label4"
        app:layout_constraintTop_toBottomOf="@+id/label4" />

    <Switch
        android:id="@+id/end_vibrate"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/label_vibrate"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/label4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/label4"
        app:layout_constraintTop_toBottomOf="@+id/end_sound" />

    <Switch
        android:id="@+id/end_wake_up_screen"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/label_wake_up_screen"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/label4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/label4"
        app:layout_constraintTop_toBottomOf="@+id/end_vibrate" />

    <Switch
        android:id="@+id/end_notify"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/label_notify"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/label4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/label4"
        app:layout_constraintTop_toBottomOf="@+id/end_wake_up_screen" />

    <Switch
        android:id="@+id/start_vibrate"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/label_vibrate"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/label3"
        app:layout_constraintStart_toStartOf="@+id/label3"
        app:layout_constraintTop_toBottomOf="@+id/start_sound" />

    <Button
        android:id="@+id/button_csp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_confirm"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_sound_position" />

    <Button
        android:id="@+id/button_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/button_over"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_sound_position"
        app:layout_constraintVertical_bias="0.501" />

    <TextView
        android:id="@+id/start_sound_choose"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/label_sound_choose"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/label3"
        app:layout_constraintStart_toStartOf="@+id/label3"
        app:layout_constraintTop_toBottomOf="@+id/start_notify" />

    <TextView
        android:id="@+id/end_sound_choose"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/label_sound_choose"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/label4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/label4"
        app:layout_constraintTop_toBottomOf="@+id/end_notify" />

    <Button
        android:id="@+id/button_check"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/button_check"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/label_second2"
        app:layout_constraintEnd_toEndOf="@+id/label_second2" />

    <TextView
        android:id="@+id/time_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/range2"
        app:layout_constraintEnd_toStartOf="@+id/button_check" />

    <Button
        android:id="@+id/button_dedicate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/button_rest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>